force-app/main/default/objects/Activity/fields/ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>ContactEmail__c</fullName>
    <description>This is used to store email Of Contact</description>
    <formula>IF( AND( NOT(ISBLANK(Contact__c)), NOT( ISBLANK(  Contact__r.Email  )) ) ,  Contact__r.Email  , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>