force-app/main/default/objects/Activity/fields/ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>ContactPhone__c</fullName>
    <description>This is used to store Phone No Of Contact</description>
    <formula>IF(  AND( NOT(ISBLANK(Contact__c)), NOT( ISBLANK( Contact__r.Phone )) ) ,  Contact__r.Phone , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>