force-app/main/default/objects/Activity/fields/CreditCardAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditCardAmount__c</fullName>
    <description>This is used to store credit card amount</description>
    <label>Credit Card Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>