force-app/main/default/objects/Activity/fields/CreditCardDate__c.field-meta.xml
<CustomField>
    <fullName>CreditCardDate__c</fullName>
    <description>This is used yo store Credit Card Date</description>
    <label>Credit Card Date</label>
    <type>Date</type>
</CustomField>